Refactor: optimización en servicios de Ruta/Paquete y sus tests [Marcos]